--- a/public/scss/components/_counselling.scss
+++ b/public/scss/components/_counselling.scss
@@ -25,6 +25,43 @@
     }
 
     .counselling-form{
-        margin-top:50px
+        margin-top:50px;
+        .personal-area{
+          margin: 30px 0px;
+        }
+        .guardian-area{
+            margin: 30px 0px;
+        }
+        .academic-profile-area{
+            margin: 30px 0px;
+        }
+        .declaration{
+            margin: 30px 0px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            p{
+                margin-left: 10px;
+            }
+        }
+        .counselling-form-button{
+            margin: 20px 0px;
+        }
+
+        .form-field{
+            padding: 10px 0px;
+            .gender{
+                ul{
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    li{
+                        display: inline-block;
+                        margin-right: 10px;
+                    }
+                }
+               
+            }
+        }
     }
 }
