--- a/public/scss/_variables.scss
+++ b/public/scss/_variables.scss
@@ -30,6 +30,7 @@ $smaller-font: 0.75rem; //12px
 
 $border1 : 1px solid #f5f5f5;
 $border2: 1px solid rgba(0, 0, 0, 0.062);
+$border3: 1px solid rgba(0, 0, 0, 0.1);
 $borderInput :  1px solid #d2d8dd;
 $small-font:0.875rem;
 
