--- a/public/scss/pages/_contact.scss
+++ b/public/scss/pages/_contact.scss
@@ -9,7 +9,7 @@
 //contact form area style
 .contact-form-area{
     label{
-        color: $accent-color;
+        // color: $accent-color;
     }
 }
 
