--- a/views/admin/student.ejs
+++ b/views/admin/student.ejs
@@ -20,56 +20,11 @@
   <link rel="stylesheet" href="/css/style.css"><!-- <link rel="stylesheet" href="/css/style.css"> -->
 
  
-  <style>
-    .select2-container {
-  z-index: 11111;
-}
-    /* Add your custom styles here */
-    #myTable {
-      width: 100%;
-      border-collapse: collapse;
-      margin: 10px 0;
-    }
-  
-    #myTable th,
-    #myTable td {
-      padding: 12px;
-      border: 1px solid #ddd;
-      text-align: left;
-    }
-  
-    #myTable th {
-      background-color: #f2f2f2;
-    }
-  
-    .select-checkbox {
-      width: 20px;
-    }
-  
-    .filters input {
-      width: 100%;
-      padding: 6px;
-      box-sizing: border-box;
-    }
-  
-    .dt-buttons {
-      margin-bottom: 20px;
-    }
-  
-    .buttons-copy,
-    .buttons-csv,
-    .buttons-excel,
-    .buttons-pdf,
-    .buttons-print {
-      background-color: #4caf50;
-      color: white;
-      padding: 10px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      margin-right: 10px;
-    }
-  </style>
+ <style>
+  .dataTables_scrollBody{
+    overflow: unset!important;
+  }
+ </style>
 </head>
 
 <body>
@@ -112,7 +67,7 @@
               </div>
 
           </section>
-        </div>
+    </div>
    </main>
       
 
