--- a/public/scss/pages/_about.scss
+++ b/public/scss/pages/_about.scss
@@ -36,22 +36,24 @@
     .why-us-item{
         display: flex;
         flex-direction: row;
-        justify-content:space-between;
+        justify-content:start;
         align-items: start;
+        gap: 20px;
         padding: 20px;
         margin-top: 24px;
         box-shadow: $shadow-1;
      
         .why-us-img{
-            background-color: $light;
-            border-radius: 5px;
+            // background-color: $light;
+            // border-radius: 5px;
            
+            // padding: 10px 20px;
+            // margin-right: 20px;
             padding: 10px 20px;
-            margin-right: 20px;
+            background-color: $accent-color;
+            color: $light;
             i{
-                font-size: 32px;
-           
-                color: $accent-color;
+                font-size: 30px;
             }
 
           
