--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/assets/vendor/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Education Academy - About</title>
+</head>
+<body>
 <%- include('partials/header.ejs') %>
  
 
@@ -21,14 +34,13 @@
         <div class="row">
             <div class="col-md-6 mt-3 mt-md-0">
                 <div class="about-text">
-                    <h2>Bharat’s Biggest <br> & Most Trusted <br> Educational Platform</h2>
-                    <p>Unlock your potential by signing up with Physics Wallah- <br>The most affordable learning
-                        solution</p>
+                    <h2>Discover, Learn, Succeed: <br> Education Academy</h2>
+                    <p>Education Academy is a leading institution dedicated to empowering students with the knowledge and skills required to excel in competitive examinations in India. With a comprehensive range of online and offline courses, we cater to the diverse needs of aspirants preparing for prestigious exams such as IIT JEE, NEET, CAT, and various other competitive tests.</p>
                     <button class="primary-button">Get Started</button>
                 </div>
             </div>
-            <div class="col-md-6 mt-3 mt-md-0">
-                <img src="./img/2.home/2.about-section/about-home.webp" class="img-fluid" alt="">
+            <div class="col-md-6 mt-5 mt-md-0">
+                <img src="../assets/img/2.home/2.about-section/about.png" class="img-fluid" alt="">
             </div>
         </div>
     </div>
@@ -50,38 +62,39 @@
             <div class="col">
                 <div class="why-us-item">
                     <div class="why-us-img">
-                        <i class="bi bi-journal-code"></i>
+                        <i class="bi bi-people-fill"></i>
                     </div>
                     <div class="why-us-text">
-                      <h6>Test Series</h6>
-                      <p>We provide you the best test series for Class XI, XII, JEE, NEET chapterwise which will be scheduled for whole year. This test series follows very logical sequence of Basic → Advance questions.</p>
+                      <h6>Experienced Faculty</h6>
+                      <p>Our team of educators comprises experienced professionals who bring a wealth of knowledge and expertise to the classroom.</p>
                     </div>
                 </div>
                 <div class="why-us-item">
                     <div class="why-us-img">
-                        <i class="bi bi-journal-code"></i>
+                        <i class="bi bi-layers"></i>
                     </div>
                     <div class="why-us-text">
-                      <h6>Test Series</h6>
-                      <p>We provide you the best test series for Class XI, XII, JEE, NEET chapterwise which will be scheduled for whole year. This test series follows very logical sequence of Basic → Advance questions.</p>
+                      <h6>Flexible Learning Options</h6>
+                      <p>With both online and offline courses available, students can choose the mode of learning that best suits their preferences and schedule.</p>
                     </div>
                 </div>
                 <div class="why-us-item">
                     <div class="why-us-img">
-                        <i class="bi bi-journal-code"></i>
+                        <i class="bi bi-heart"></i>
                     </div>
                     <div class="why-us-text">
-                      <h6>Test Series</h6>
-                      <p>We provide you the best test series for Class XI, XII, JEE, NEET chapterwise which will be scheduled for whole year. This test series follows very logical sequence of Basic → Advance questions.</p>
+                      <h6>Personalized Attention</h6>
+                      <p> We believe in providing individualized support to every student, offering doubt-solving sessions and one-on-one guidance to address their specific needs.</p>
                     </div>
                 </div>
                 <div class="why-us-item">
                     <div class="why-us-img">
-                        <i class="bi bi-journal-code"></i>
+                        <i class="bi bi-trophy"></i>
                     </div>
                     <div class="why-us-text">
-                      <h6>Test Series</h6>
-                      <p>We provide you the best test series for Class XI, XII, JEE, NEET chapterwise which will be scheduled for whole year. This test series follows very logical sequence of Basic → Advance questions.</p>
+                      <h6>Proven Track Record</h6>
+                      <p>Over the years, Education Academy has helped countless students achieve their academic goals and realize their dreams of pursuing higher education in top institutions.
+                    </p>
                     </div>
                 </div>
             </div>
