--- a/views/admin/batch.ejs
+++ b/views/admin/batch.ejs
@@ -19,181 +19,139 @@
 <body>
   <main class="admin-area">
     <div class="row g-0">
-      <div class="col-2">
-      <%- include('partials/sidebar.ejs')%>
-    </div>
-   <div class="col-10">
-     <%- include('partials/nav.ejs')%>
-            <!--batch detail area-->
-            <section class="form-area">
-              <div class="row">
-                <div class="col-12">
-                  <div class="form-header">
-                    <div class="form-title">
-                      <h2>Batches Detail</h2>
-                      <!-- <p>Make Sure cross check all Details carefully Before Press Add Button</p> -->
-                    </div>
-
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#add_batch">Add
-                      Batch</button>
-
-                  </div>
-
-                </div>
-
-
-                <div class="col-12">
-                  <!--  batch table -->
-                  <table id="myTable" class="table table-striped table-hover "></table>
-                </div>
-                <!-- add course  modal -->
-                <div class="modal" id="add_batch">
-                  <div class="modal-dialog modal-lg">
-                    <div class="modal-content">
-
-                      <!-- Modal Header -->
-                      <div class="modal-header">
-                        <h4 class="modal-title">Add Batch</h4>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                      </div>
-
-                      <!-- Modal Body -->
-                      <div class="modal-body">
-
-                        <!-- add batch form modal -->
-                        <div class="col-12">
-
-
-                          <form id="addBatch" class="custom-form">
-                            <!-- form main area -->
-                            <div class="row">
-                              <div class="col-md-8">
-                                <div class="form-main">
-                                  <!-- course title  -->
-                                  <div class="mb-3">
-                                    <label for="name" class="form-label">Add Batch Title</label>
-                                    <input type="text" class="form-control" id="name" name="name" required>
-                                  </div>
-
-                                    <!-- course title  -->
-                                    <div class="mb-3">
-                                      <label for="description" class="form-label">Description</label>
-                                      <input type="text" class="form-control" id="name" name="description" required>
-                                    </div>
-                   
-                                  <!-- start date -->
-                                  <div class="d-flex  ">
-                                    <div class="mb-3">
-                                      <label for="startDate" class="form-label">Start Date</label>
-                                      <input type="date" class="form-control" id="startDate" name="startDate" required>
-                                    </div>
-
-                                    <!-- start time -->
-                                    <div class="mb-3 ms-5">
-                                      <label for="startTime" class="form-label">Start Time</label>
-                                      <input type="time" class="form-control" id="startTime" name="startTime" required>
-                                    </div>
-                                  </div>
-
-                                  <div class="d-flex ">
-                                    <!-- end date -->
-                                    <div class="mb-3">
-                                      <label for="endDate" class="form-label">End Date</label>
-                                      <input type="date" class="form-control" id="endDate" name="endDate" required>
-                                    </div>
-
-                                    <!-- end time -->
-                                    <div class="mb-3 ms-5">
-                                      <label for="endTime" class="form-label">End Time</label>
-                                      <input type="time" class="form-control" id="endTime" name="endTime" required>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-
-                              <!-- form side bar area -->
-                              <div class="col-md-4">
-                                <div class="form-sidebar">
-
-                                  <!-- select mode -->
-                                  <div class="mb-3">
-                                    <label class="form-label">Select Mode</label>
-                                    <div class="d-flex">
-                                      <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="mode" id="onlineMode"
-                                          value="Online" checked>
-                                        <label class="form-check-label" for="onlineMode">
-                                          Online
-                                        </label>
-                                      </div>
-                                      <div class="form-check ms-3">
-                                        <input class="form-check-input" type="radio" name="mode" id="offlineMode"
-                                          value="Offline">
-                                        <label class="form-check-label" for="offlineMode">
-                                          Offline
-                                        </label>
-                                      </div>
-                                    </div>
-                                  </div>
-
-                                                 <!-- no of Student Include -->
-                                                 <div class="mb-3">
-                                                  <label for="student-count" class="form-label">Total Lecutres *</label>
-                                                  <input type="number" class="form-control" id="student-count" name="totalLectures"
-                                                    required>
-                                                </div>
-              
-
-                                  <!-- select course -->
-                                  <!-- <div class="mb-3 custom-checkbox">
-              <label for="batches" class="form-label">Select Course</label>
-              <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="batchesDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                  Select Course
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="batchesDropdown">
-                  <li>
-                    <input class="form-check-input" type="checkbox" value="Morning Batch" id="morningBatch" name="batches[]">
-                    <label class="form-check-label" for="morningBatch">Morning Batch (9:00AM to 12:00)</label>
-                  </li>
-                  <li>
-                    <input class="form-check-input" type="checkbox" value="Afternoon Batch" id="afternoonBatch" name="batches[]">
-                    <label class="form-check-label" for="afternoonBatch">Afternoon Batch (12:00 to 3:00PM)</label>
-                  </li>
-                  <li>
-                    <input class="form-check-input" type="checkbox" value="Evening Batch" id="eveningBatch" name="batches[]">
-                    <label class="form-check-label" for="eveningBatch">Evening Batch (4:00PM to 7:00PM)</label>
-                  </li>
-                </ul>
-              </div>
-             </div> -->
-
-
-
-
-                                </div>
-
-                              </div>
-                            </div>
-
-
-                            <!-- submit -->
-                            <button type="submit" class="btn btn-primary">submit</button>
-                          </form>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-
-              </div>
-
-            </section>
-          </section>
-       
+        <div class="col-2">
+            <%- include('partials/sidebar.ejs')%>
         </div>
-      </main>
+        <div class="col-10">
+            <%- include('partials/nav.ejs')%>
+            <!-- batch detail area -->
+            <section class="form-area">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="form-header">
+                            <div class="form-title">
+                                <h2>Batches Detail</h2>
+                                <!-- <p>Make Sure cross check all Details carefully Before Press Add Button</p> -->
+                            </div>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#add_batch">Add Batch</button>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <!--  batch table -->
+              
+                        <table id="myTable" class="table table-striped table-hover "></table></div>
+                    </div>
+                    <!-- add course  modal -->
+                    <div class="modal" id="add_batch">
+                        <div class="modal-dialog modal-lg">
+                            <div class="modal-content">
+                                <!-- Modal Header -->
+                                <div class="modal-header">
+                                    <h4 class="modal-title">Add Batch</h4>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                                </div>
+                                <!-- Modal Body -->
+                                <div class="modal-body">
+                                    <!-- add batch form modal -->
+                                    <div class="col-12">
+                                        <form id="addBatch" class="custom-form">
+                                            <!-- form main area -->
+                                            <div class="row">
+                                                <div class="col-md-8">
+                                                    <div class="form-main">
+                                                        <!-- course title  -->
+                                                        <div class="mb-3">
+                                                            <label for="batch_title" class="form-label">Add Batch
+                                                                Title</label>
+                                                            <input type="text" class="form-control" id="batch_title"
+                                                                name="batch_title" required>
+                                                        </div>
+                                                        <!-- course description  -->
+                                                        <div class="mb-3">
+                                                            <label for="description" class="form-label">Description</label>
+                                                            <input type="text" class="form-control" id="description"
+                                                                name="description" required>
+                                                        </div>
+                                                        <!-- start date and time -->
+                                                        <div class="d-flex">
+                                                            <div class="mb-3">
+                                                                <label for="startDate" class="form-label">Start
+                                                                    Date</label>
+                                                                <input type="date" class="form-control"
+                                                                    id="startDate" name="startDate" required>
+                                                            </div>
+                                                            <div class="mb-3 ms-5">
+                                                                <label for="startTime" class="form-label">Start
+                                                                    Time</label>
+                                                                <input type="time" class="form-control"
+                                                                    id="startTime" name="startTime" required>
+                                                            </div>
+                                                        </div>
+                                                        <!-- end date and time -->
+                                                        <div class="d-flex">
+                                                            <div class="mb-3">
+                                                                <label for="endDate" class="form-label">End
+                                                                    Date</label>
+                                                                <input type="date" class="form-control"
+                                                                    id="endDate" name="endDate" required>
+                                                            </div>
+                                                            <div class="mb-3 ms-5">
+                                                                <label for="endTime" class="form-label">End
+                                                                    Time</label>
+                                                                <input type="time" class="form-control"
+                                                                    id="endTime" name="endTime" required>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <!-- form side bar area -->
+                                                <div class="col-md-4">
+                                                    <div class="form-sidebar">
+                                                        <!-- select mode -->
+                                                        <div class="mb-3">
+                                                            <label class="form-label">Select Mode</label>
+                                                            <div class="d-flex">
+                                                                <div class="form-check">
+                                                                    <input class="form-check-input" type="radio"
+                                                                        name="mode" id="onlineMode" value="Online"
+                                                                        checked>
+                                                                    <label class="form-check-label"
+                                                                        for="onlineMode">Online</label>
+                                                                </div>
+                                                                <div class="form-check ms-3">
+                                                                    <input class="form-check-input" type="radio"
+                                                                        name="mode" id="offlineMode"
+                                                                        value="Offline">
+                                                                    <label class="form-check-label"
+                                                                        for="offlineMode">Offline</label>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <!-- no of Student Include -->
+                                                        <div class="mb-3">
+                                                            <label for="student-count" class="form-label">Total
+                                                                Lectures *</label>
+                                                            <input type="number" class="form-control"
+                                                                id="student-count" name="totalLectures" required>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <!-- submit -->
+                                            <button type="submit" class="btn btn-primary">Submit</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+               
+            </section>
+        </div>
+    </div>
+</main>
+
 
   <!-- modal s -->
   <!-- edit modal -->
