--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/assets/vendor/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Education Academy - Contact</title>
+</head>
+<body>
 <%- include('partials/header.ejs') %>
  
 
@@ -24,8 +37,8 @@
         <div class="row">
             <div class="col">
                 <div class="section-title">
-                    <h2>Contact Us For any query</h2>
-                    <p>13 year of experiences</p>
+                    <h2>Contact Us</h2>
+                    <p>15 year of experiences</p>
                 </div>
                 
             </div>
