--- a/views/admin/student.ejs
+++ b/views/admin/student.ejs
@@ -24,6 +24,9 @@
   .dataTables_scrollBody{
     overflow: unset!important;
   }
+  .dataTables_scrollHead{
+    overflow: unset!important;
+  }
  </style>
 </head>
 
