--- a/views/admin/purchase.ejs
+++ b/views/admin/purchase.ejs
@@ -21,6 +21,14 @@
 
  
   <style>
+ 
+  .dataTables_scrollBody{
+    overflow: unset!important;
+  }
+  .dataTables_scrollHead{
+    overflow: unset!important;
+  }
+ 
     .select2-container {
   z-index: 11111;
 }
