--- a/views/admin/partials/sidebar.ejs
+++ b/views/admin/partials/sidebar.ejs
@@ -1,24 +1,94 @@
+<nav id="sidebar" class="sidebar">
+  <div class="sidebar-content js-simplebar">
+    <a class="sidebar-brand" href="index.html">
+      <span class="align-middle">Education Academy</span>
+    </a>
 
-    <aside class="admin-sidebar-area">
-      <ul>
-        
-        <li><h4>Menu</h4></li>
-        <li><a href="/admin/courselists"><i class="bi bi-speedometer"></i></i>Dashboard</a></li>
-        <!-- <li >
-          <a href="" class="admin-menu-list" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" ><i class="bi bi-arrow-right-square"></i>Courses</a>
-          <ul id="collapseOne" class="collapse" >
-            <li><a class="dropdown-item" href="">All Course</a></li>
-            <li><a class="dropdown-item" href="/admin/course">Add Courses </a></li>
-            <li><a class="dropdown-item" href="#">FAQ's</a></li>
-            <li><a class="dropdown-item" href="#">Batchs</a></li>
-          </ul>
-        </li> -->
-        <li><a href="/admin/courselists"><i class="bi bi-book"></i>Courses</a></li>
-        <li><a href="/admin/batch"><i class="bi bi-layers"></i>Batch</a></li>
-        <li><a href="/admin/faculty"><i class="bi bi-person"></i>Faculty</a></li>
-        <li><a href="/admin/student"><i class="bi bi-person-square"></i>Students</a></li>
-         <li><a href="/admin/lead"><i class="bi bi-bullseye"></i>Lead</a></li>
-        <li><a href="/admin/purchase"><i class="bi bi-receipt-cutoff"></i>Purchase</a></li>
-        <li><a href="#"><i class="bi bi-key-fill"></i>Admin</a></li>
-      </ul>
-    </aside> 
+    <ul class="sidebar-nav">
+      <li class="sidebar-header">
+        Pages
+      </li>
+
+      <li class="sidebar-item active">
+        <a class="sidebar-link" href="/admin/courselists">
+          <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Dashboard</span>
+        </a>
+      </li>
+
+      <li class="sidebar-item">
+        <a class="sidebar-link" href="/admin/courselists">
+          <i class="align-middle" data-feather="book"></i> <span class="align-middle">Courses</span>
+        </a>
+      </li>
+
+      <li class="sidebar-item">
+        <a class="sidebar-link" href="/admin/batch">
+          <i class="align-middle" data-feather="clock"></i> <span class="align-middle">Batches</span>
+        </a>
+      </li>
+
+      <li class="sidebar-item">
+        <a class="sidebar-link" href="/admin/faculty">
+          <i class="align-middle" data-feather="user-check"></i> <span class="align-middle">Faculty</span>
+        </a>
+      </li>
+
+      <li class="sidebar-item">
+        <a class="sidebar-link" href="/admin/student">
+          <i class="align-middle" data-feather="user"></i> <span class="align-middle">Students</span>
+        </a>
+      </li>
+
+      <li class="sidebar-header">
+       Marketing
+      </li>
+      
+      <!-- dropdown start -->
+      <!-- <li class="sidebar-item">
+        <a data-target="#ui" data-toggle="collapse" class="sidebar-link collapsed">
+          <i class="align-middle" data-feather="briefcase"></i> <span class="align-middle">UI Elements</span>
+        </a>
+        <ul id="ui" class="sidebar-dropdown list-unstyled collapse " data-parent="#sidebar">
+          <li class="sidebar-item"><a class="sidebar-link" href="ui-alerts.html">Alerts</a></li>
+          <li class="sidebar-item"><a class="sidebar-link" href="ui-buttons.html">Buttons</a></li>
+          <li class="sidebar-item"><a class="sidebar-link" href="ui-cards.html">Cards</a></li>
+          <li class="sidebar-item"><a class="sidebar-link" href="ui-general.html">General</a></li>
+          <li class="sidebar-item"><a class="sidebar-link" href="ui-grid.html">Grid</a></li>
+          <li class="sidebar-item"><a class="sidebar-link" href="ui-modals.html">Modals</a></li>
+          <li class="sidebar-item"><a class="sidebar-link" href="ui-typography.html">Typography</a></li>
+        </ul>
+      </li> -->
+      <!-- dropdown end -->
+
+      <li class="sidebar-item">
+        <a class="sidebar-link" href="/admin/lead">
+          <i class="align-middle" data-feather="award"></i> <span class="align-middle">Lead</span>
+        </a>
+      </li>
+      
+       <li class="sidebar-item">
+        <a class="sidebar-link" href="/admin/purchase">
+          <i class="align-middle" data-feather="credit-card"></i> <span class="align-middle">Purchase</span>
+        </a>
+      </li>
+
+      <li class="sidebar-header">
+        Settings
+      </li>
+
+      <li class="sidebar-item">
+        <a class="sidebar-link" href="charts-chartjs.html">
+          <i class="align-middle" data-feather="key"></i> <span class="align-middle">Admin</span>
+        </a>
+      </li>
+
+      <li class="sidebar-item">
+        <a class="sidebar-link" href="maps-google.html">
+          <i class="align-middle" data-feather="settings"></i> <span class="align-middle">Other</span>
+        </a>
+      </li>
+    </ul>
+
+    
+  </div>
+</nav>
