--- a/views/admin/batch.ejs
+++ b/views/admin/batch.ejs
@@ -12,18 +12,18 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/2.0.0/css/dataTables.dataTables.css">
   <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet">
-
+  <link href="/assets/admin-panel/css/app.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-  <main class="admin-area">
-    <div class="row g-0">
-        <div class="col-2">
-            <%- include('partials/sidebar.ejs')%>
-        </div>
-        <div class="col-10">
-            <%- include('partials/nav.ejs')%>
+  <div class="wrapper">
+		<%- include('partials/sidebar.ejs')%>
+
+		<div class="main">
+			<%- include('partials/nav.ejs')%>
+    
+      <main class="content">
             <!-- batch detail area -->
             <section class="form-area">
                 <div class="row">
@@ -148,9 +148,10 @@
                     </div>
                
             </section>
-        </div>
-    </div>
-</main>
+          </main>
+        </div>  
+         
+      </div>
 
 
   <!-- modal s -->
@@ -274,6 +275,7 @@
 
 
 
+  <script src="/assets/admin-panel/js/app.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Include DataTables -->
