--- a/views/admin/courseList.ejs
+++ b/views/admin/courseList.ejs
@@ -14,7 +14,7 @@
    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet">
 
    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
- 
+ 	<link href="/assets/admin-panel/css/app.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css"><!-- <link rel="stylesheet" href="/css/style.css"> -->
 
     <style>
@@ -70,18 +70,13 @@
 </head>
 
 <body>
-   
-    <main class="container-xxl admin-area">
-      <div class="row g-0">
-            <div class="col-2">
+  <div class="wrapper">
+		<%- include('partials/sidebar.ejs')%>
 
-              <%- include('partials/sidebar.ejs')%>
-            </div>
+		<div class="main">
+			<%- include('partials/nav.ejs')%>
     
-        <div class="col-10">
-          <%- include('partials/nav.ejs')%>
-    
-            <!-- add batch detail form -->
+      <main class="content">
       <section class="form-area">
         <div class="row">
           <div class="col-12">
@@ -500,16 +495,15 @@
         
       
       </section>
-       
-      
+    </main>
+    </div>  
      
-    </div>
   </div>
-  </main>
 
 
 
- 
+
+ <script src="/assets/admin-panel/js/app.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Include DataTables -->
@@ -533,7 +527,7 @@
 
  
 
-   
+
   <script>
 
 //  create new elemetn faq
@@ -703,7 +697,7 @@ async function deleteCourse(id) {
 
   <script type="text/javascript">
 $(document).ready(function() {
-    let courses = <%-JSON.stringify(courses)%> 
+    let courses = <% -JSON.stringify(courses) %>;
      // If there is no data, show table header and "Data not found" message
    // If there is no data, show table header and "Data not found" message
 
