--- a/views/admin/partials/nav.ejs
+++ b/views/admin/partials/nav.ejs
@@ -1,17 +1,31 @@
-<header class="admin-header">
-    <ul class="nav">
-      <li class="nav-item "><a href=""><span>Education Academy</span></a></li>
-      <li class="nav-item header-profile">
-        <div class="dropdown">
-          <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Deepak
-          </button>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Profile</a></li>
-            <li><a class="dropdown-item" href="#">Log In</a></li>
-            <li><a class="dropdown-item" href="#">Log Out</a></li>
-          </ul>
+<nav class="navbar navbar-expand navbar-light navbar-bg">
+  <a class="sidebar-toggle d-flex">
+    <i class="hamburger align-self-center"></i>
+  </a>
+
+ 
+
+  <div class="navbar-collapse collapse">
+    <ul class="navbar-nav navbar-align">
+    
+  
+      <li class="nav-item dropdown">
+        <a class="nav-icon dropdown-toggle d-inline-block d-sm-none" href="#" data-toggle="dropdown">
+          <i class="align-middle" data-feather="settings"></i>
+        </a>
+
+        <a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-toggle="dropdown">
+          <!-- <img src="img/avatars/avatar.jpg" class="avatar img-fluid rounded mr-1" alt="Charles Hall" />  -->
+          <span class="text-dark">Deepak Malik</span>
+        </a>
+        <div class="dropdown-menu dropdown-menu-right">
+          <a class="dropdown-item" href="pages-profile.html"><i class="align-middle mr-1" data-feather="user"></i> Profile</a>
+          <a class="dropdown-item" href="pages-settings.html"><i class="align-middle mr-1" data-feather="settings"></i> Settings</a>
+          <a class="dropdown-item" href="#"><i class="align-middle mr-1" data-feather="globe"></i>Go To Site</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Log out</a>
         </div>
       </li>
     </ul>
-  </header>
+  </div>
+</nav>
